// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapContainer should render 1`] = `
<div
  className="c-map__wrapper"
>
  <div
    className="c-map c-map--drawing-mode-none qa-map-container"
  >
    <Connect(LeafletContainer)
      getLeafletInstance={[Function]}
      showMapLink={true}
    />
    <ToggleFullscreen
      alignLeft={false}
      isFullscreen={false}
      onToggleFullscreen={[Function]}
      title="Kaart"
    />
    <div
      className="c-map__controls c-map__controls--bottom-left"
    >
      <Connect(MapPanel)
        isMapPanelVisible={true}
      />
    </div>
  </div>
</div>
`;

exports[`MapContainer should render with drawingmode: draw 1`] = `
<div
  className="c-map__wrapper"
>
  <div
    className="c-map c-map--drawing-mode-draw qa-map-container"
  >
    <Connect(LeafletContainer)
      getLeafletInstance={[Function]}
      showMapLink={true}
    />
    <ToggleFullscreen
      alignLeft={false}
      isFullscreen={false}
      onToggleFullscreen={[Function]}
      title="Kaart"
    />
    <div
      className="c-map__controls c-map__controls--bottom-left"
    >
      <Connect(MapPanel)
        isMapPanelVisible={true}
      />
    </div>
  </div>
</div>
`;
